# dura

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: CODEOWNERS  dependabot.yml  settings.yml
.github/workflows/: build.yaml  upgrade-flakes.yaml
scripts/: CachedFs.ipynb  dura.fish  pre-commit.sh
src/: config.rs  database.rs  git_repo_iter.rs  lib.rs  log.rs  logger.rs  main.rs  metrics.rs  octopus.rs  poll_guard.rs  poller.rs  snapshots.rs
src/poller/: mod.rs  timestamp_watcher.rs
tests/: end_to_end_test.rs  git_repo_iter_test.rs  octopus_test.rs  poll_guard_test.rs  snapshots_test.rs  startup_test.rs  status_test.rs  test_octopus.rs  util.rs  watch_test.rs
tests/util/: daemon.rs  dura.rs  git_repo.rs  macros.rs  mod.rs  workspace.rs
