[package]
name = "dura"
version = "0.2.0-dev"
edition = "2021"
authors = ["Tim Kellogg and the Internet"]
description = "Dura backs up your work automatically via Git commits."
license = "Apache-2.0"
homepage = "https://github.com/tkellogg/dura/"
repository = "https://github.com/tkellogg/dura/"
documentation = "https://github.com/tkellogg/dura/blob/master/README.md"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0", features = ["cargo", "string"] }
git2 = "0.15"
hdrhistogram = "7.5.2"
dirs = "4.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = "0.4"
toml = "0.5.8"
tracing = { version = "0.1.5"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.2.0"
serial_test = "0.9.0"
